--- a/src/pages/header.css
+++ b/src/pages/header.css
@@ -5,10 +5,62 @@
 width:100%;
 background-color:#ffff;
 float:right;
-padding:20px;
+padding-top: 20px;
+margin-bottom: 20px !important;
 }
 
 .sign-up1{
     margin-right:40px;
 }
 
+.toggle{
+    color:blue;
+  
+}
+.toggle-sidebar{
+    width:230px;
+}
+.btn  {
+    margin-right: 20px;
+}
+ .fa-bars{
+   margin-left: 8px;
+   margin-top:10px;
+}
+.sidebar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 200px;
+    background-color:rgb(34 33 33 / 84%);
+    color:white;
+    z-index:9999;
+    padding:20px 30px;
+    transition: width 0.3s ease; 
+}
+.collapsed{
+    width:100px;
+}
+.sidebar h4,.fa-bars {
+    margin-bottom: 20px;
+}
+.sidebar h4 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: normal;
+    font-size:1em;
+   
+     
+}
+.sidebar  .icon{
+    margin-right:20px;
+}
+
+
+@media screen and (max-width:400px){
+     
+.sidebar{
+    display:none;
+}
+
+}
