--- a/src/pages/tablecontent.css
+++ b/src/pages/tablecontent.css
@@ -1,20 +1,22 @@
 
-.table-cointainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   margin-top:20px;
-   padding: 30px;
-  
-   }
+
+   .container{
+    margin-left: 200px;
+   } 
+   .container1{
+    margin-left:70px;
+    width:100%;
+   } 
   table{
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    margin:20px 60px;
   }
-  
-  table,th,td{
+  /* .image{
+    width:'198px'; height:'100'
+  } */
+th,td{
     background-color:transparent;
-   
-    box-shadow:0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
   
   border-bottom:1px solid #808080;
   }
@@ -30,20 +32,34 @@
   }
   table tr{
     display: grid;
-    grid-template-columns:80px 1fr 200px 90px;
+    grid-template-columns:110px 710px 200px 130px;
   
   }
+.table-content tr {
+  display: grid;
+  grid-template-columns:120px 720px 260px 140px;
+
+}
+
   .pagination{
   margin:30px 330px;
   
   
   }
   .form{
-    text-align: left;
-   margin:15px;
-   margin-left: 20px;
+    text-align: right;
+   margin-top:20px !important;
+   margin-right: 100px;
   
   }
+  .form1{
+    margin-right: 150px;
+
+  }
+
+  
+
+ 
   form input,button{
     margin: auto;
     background-color: hsl(0, 0%, 90%);
@@ -66,7 +82,11 @@
    padding:10px;
    padding-top:30px;
   }
-  
+  .image{
+    width: 100%;
+    height: 100px;
+
+  }
   .button{
     background-color:rgb(205, 205, 246);
     color: black;
@@ -83,3 +103,34 @@
     margin-right: 20px;
       margin-top: 11px;
   }
+
+  @media screen and (max-width:400px){
+     
+    table tr{
+      display: grid;
+      grid-template-columns:40px 250px 140px 60px;
+    }
+
+    .container{
+      margin-left: 0px;
+     } 
+     .container1{
+      margin-left:0px;
+      width:0px;
+     } 
+
+     table{
+      margin:5px 10px;
+    }
+
+    .form{
+      text-align: left;
+     padding: 20px 10px;
+    }
+  
+    .image{
+      width: 100%;
+      height: 80px;
+  
+    }
+}
