--- a/src/pages/header.css
+++ b/src/pages/header.css
@@ -1,18 +1,46 @@
 
-.header{
+.highlight_header{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     height:80px;
-width:100%;
+width:105%;
 background-color:#ffff;
-float:right;
-padding-top: 20px;
-margin-bottom: 20px !important;
+margin:5px;
+padding-bottom:25px;
+padding-top:15px;
+}
+.sign-out1{
+
+    margin-left: 1420px;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    background-color:purple;
+    color: white;
+    padding: 8px;
+    margin: 10px;
+
 }
 
-.sign-up1{
-    margin-right:40px;
-}
+.sign-out3{
+    margin-right: 500px;
+    padding: 8px;
+    margin: 8px;
 
+}
+.sign-out1:hover{
+
+    background-color:blue;
+    color: white;
+}
+.backtoHomepage{
+    text-decoration: none;
+   position: absolute;
+   left: 250px;
+}
+.backtoHomepage1{
+   position: absolute;
+   left: 143px;
+}
 .toggle{
     color:blue;
   
@@ -20,19 +48,26 @@ margin-bottom: 20px !important;
 .toggle-sidebar{
     width:230px;
 }
-.btn  {
-    margin-right: 20px;
-}
+
  .fa-bars{
    margin-left: 8px;
    margin-top:10px;
 }
+.getEmail{
+   color:orange;
+   margin-left: 1270px;
+
+}
+.getEmail2{
+    margin-left: 1150px;
+ 
+ }
 .sidebar{
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 200px;
+    width: 14%;
     background-color:rgb(34 33 33 / 84%);
     color:white;
     z-index:9999;
@@ -58,9 +93,33 @@ margin-bottom: 20px !important;
 
 
 @media screen and (max-width:400px){
+    .sidebar{
+        width:24%;
+
+    }
+    .highlight_header{
+        width:400%;
+    }
+    .getEmail{
+        color:orange;
+        margin-left: 300px;
      
-.sidebar{
-    display:none;
+     }
+    .getEmail2{
+        margin-left: 150px;
+        margin-top: 50px;
 }
+.backtoHomepage{
+   
+   left: 90px;
+}
+.backtoHomepage1{
+   left: 130px;
+}
+
+/* .collapsed{
+        width:40%;  
+
+    } */
 
 }
