--- a/src/pages/tablecontent.css
+++ b/src/pages/tablecontent.css
@@ -48,8 +48,7 @@ th,td{
   }
   .form{
     text-align: right;
-   margin-top:20px !important;
-   margin-right: 100px;
+   margin-right: 10px;
   
   }
   .form1{
@@ -60,20 +59,20 @@ th,td{
   
 
  
-  form input,button{
-    margin: auto;
+ .searchHere{
+    margin-left:270px;
     background-color: hsl(0, 0%, 90%);
     transition: background-color 300ms;
    outline:none;
    border:none;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
    padding: 10px;
+  
    border-bottom:1px solid gray;
   }
-  
-  .filterData{
-    text-align: center;
-    margin-top:20px;
+  .searchHere1{
+    margin-left: 140px;
+
   }
   
   table tr td:nth-child(1),
@@ -99,38 +98,25 @@ th,td{
    color:rgb(205, 205, 246);
   }
   
-  .checkbox{
+  /* .checkbox_id{
     margin-right: 20px;
       margin-top: 11px;
-  }
+  } */
 
   @media screen and (max-width:400px){
-     
-    table tr{
-      display: grid;
-      grid-template-columns:40px 250px 140px 60px;
-    }
-
-    .container{
-      margin-left: 0px;
-     } 
-     .container1{
-      margin-left:0px;
-      width:0px;
-     } 
-
-     table{
-      margin:5px 10px;
-    }
-
-    .form{
-      text-align: left;
-     padding: 20px 10px;
-    }
-  
-    .image{
-      width: 100%;
-      height: 80px;
-  
-    }
-}
+    
+    .searchHere{
+      margin-left:120px;
+      }
+      .container{
+        margin-left: 50px;
+       } 
+       table{
+        margin:20px 40px;
+      }
+      table tr td:nth-child(1),
+  table tr td:nth-child(2),table tr td:nth-child(4){
+    padding-top: 20px;
+  }
+ 
+  }
